[package]
name = "sqlite-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "*"
wasm-logger = "0.2"
log = "0.4"
console_error_panic_hook = { version = "0.1.6", optional = true }


[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
